# GA-Project-4-Python-Django

./: .gitignore  README.md
client/moviewer/: package-lock.json  package.json
client/moviewer/src/: index.js
client/moviewer/src/components/Navbar/: Navbar.css  Navbar.jsx
client/moviewer/src/components/Poster/: Poster.css  Poster.jsx
client/moviewer/src/components/SignupForm/: SignupForm.jsx
client/moviewer/src/hooks/: UseUser.jsx
client/moviewer/src/pages/App/: App.css  App.js
client/moviewer/src/pages/DetailsPage/: DetailsPage.css  DetailsPage.jsx
client/moviewer/src/pages/HomePage/: HomePage.css  HomePage.jsx
client/moviewer/src/pages/MyShopPage/: MyShopPage.jsx
client/moviewer/src/pages/ResultsPage/: ResultsPage.jsx
client/moviewer/src/utils/: listingService.js  userService.js
server/: Dockerfile  db.sqlite3  pyproject.toml
server/likes/: models.py  serializers.py  urls.py  views.py
server/likes/migrations/: 0001_initial.py
server/listings/: models.py  permissions.py  serializers.py  urls.py  views.py
server/listings/migrations/: 0001_initial.py  0002_listing_delete_model.py  0003_listing_movie_id.py  0004_listing_like_count_alter_listing_movie_id.py  0005_alter_listing_movie_id.py
server/movies/: models.py
server/movies/migrations/: 0001_initial.py
server/moviewer/: settings.py  urls.py
server/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
server/users/migrations/: 0001_initial.py  0002_customuser_listings.py  0003_customuser_likes.py  0004_remove_customuser_likes_remove_customuser_listings.py
