[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Mohamed <mohamed.sheik98@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^2.0.0"
mypy = "^0.990"
django = "^4.1.3"
djangorestframework = "^3.14.0"
cors = "^1.0.1"
django-cors-headers = "^3.13.0"
django-address = "^0.2.8"
psycopg2 = "^2.9.5"
pyjwt = "^2.6.0"
dj-database-url = "^1.0.0"
daphne = "^4.0.0"
environ = "^1.0"
django-environ = "^0.9.0"
django-environs = "^0.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
